2006-03-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* test/aromatest.cpp: New test to check aromaticity. When supplied
	with a test file, it checks to be sure all non-hydrogen atoms are
	aromatic.

	* scripts/*: Update scripting wrappers with SWIG 1.3.29.

2006-03-27  Michael Banck  <mbanck@gmx.net>

	* src/rand.cpp: Include <time.h> and <sys/time.h>.

2006-03-27  Michael Banck  <mbanck@gmx.net>

	* src/fingerprint.h: Fix compilation error with gcc-4.1.
	  Patch by <vlaaad@users.sourceforge.net>.
	* src/formats/copyformat.cpp: Likewise.
	* src/formats/crkformat.cpp: Likewise.
	* src/formats/xml/cmlreactlformat.cpp: Likewise.
	* src/formats/xml/xml.h: Likewise.
	* src/formats/xml/xmlformat.cpp: Likewise.

2006-03-27  Michael Banck  <mbanck@gmx.net>

	* src/formats/fastaformat.cpp: Include babelconfig.h.

2006-03-16 Chris Morley <ob@gaseq.co.uk>

	* data/atomtyp.txt: IMPVAL for halogen ions
	
	* /src/formats/smilesformat.cpp(ParseComplex): Move hcount test
	back again so that [C] is read as C not CH4
	(GetSmilesElement): Restrict addition of implicit H by
	resurrecting normalValence variable. Output [C], not [CH0].

2006-03-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/xml/xml.h: Fix std:: namespace decl for type_info.

	* src/Makefile.am: Temporarily disable compilation of src/GUI
	until compile errors are all fixed.

	* scripts/* : More changes to allow building, linking, and running
	(again!) with current CVS tree.

	* src/generic.h (OBTorsion): Add default code for SetData(OBBond*)
	-- not sure what this *should* do. Allows compilation of script
	wrappers.

	* src/obutil.h, src/math/matrix3x3.h, src/math/vector3.h: Add
	#ifndef SWIG portions to prevent SWIG from choking on some
	non-class function declarations.

	* */Makefile.in: Regenerate (get rid of bogus --gnu flags).

2006-03-14 Chris Morley <ob@gaseq.co.uk>

	* src/GUI/OBGUI.cpp(Expand): Mods to avoid errors when filenames
	are empty, have trailing paces, semicolons, etc.
	